// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.TagMutability",
  "jsiiId": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.TagMutability.MUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
    Object {
      "displayName": "IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.TagMutability.IMMUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
  ],
  "sourceFile": "lib/repository.ts",
  "sourceLine": 653,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
}
`;

exports[`csharp snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

The tag mutability setting for your repository.

# Members <a name=\\"Members\\" id=\\"Members\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>Amazon.CDK.AWS.ECR.TagMutability.MUTABLE</code> | allow image tags to be overwritten. |
| <code>Amazon.CDK.AWS.ECR.TagMutability.IMMUTABLE</code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

## \`MUTABLE\` <a name=\\"MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


## \`IMMUTABLE\` <a name=\\"IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`go snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.TagMutability",
  "jsiiId": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "TagMutability_MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.TagMutability_MUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
    Object {
      "displayName": "TagMutability_IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.TagMutability_IMMUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
  ],
  "sourceFile": "lib/repository.ts",
  "sourceLine": 653,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
}
`;

exports[`go snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

The tag mutability setting for your repository.

# Members <a name=\\"Members\\" id=\\"Members\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>github.com/aws/aws-cdk-go/awscdkawsecr.TagMutability_MUTABLE</code> | allow image tags to be overwritten. |
| <code>github.com/aws/aws-cdk-go/awscdkawsecr.TagMutability_IMMUTABLE</code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

## \`TagMutability_MUTABLE\` <a name=\\"TagMutability_MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


## \`TagMutability_IMMUTABLE\` <a name=\\"TagMutability_IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`java snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.TagMutability",
  "jsiiId": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.TagMutability.MUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
    Object {
      "displayName": "IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.TagMutability.IMMUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
  ],
  "sourceFile": "lib/repository.ts",
  "sourceLine": 653,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
}
`;

exports[`java snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

The tag mutability setting for your repository.

# Members <a name=\\"Members\\" id=\\"Members\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>software.amazon.awscdk.services.ecr.TagMutability.MUTABLE</code> | allow image tags to be overwritten. |
| <code>software.amazon.awscdk.services.ecr.TagMutability.IMMUTABLE</code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

## \`MUTABLE\` <a name=\\"MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


## \`IMMUTABLE\` <a name=\\"IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`python snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "aws_cdk.aws_ecr.TagMutability",
  "jsiiId": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "aws_cdk.aws_ecr.TagMutability.MUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
    Object {
      "displayName": "IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "aws_cdk.aws_ecr.TagMutability.IMMUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
  ],
  "sourceFile": "lib/repository.ts",
  "sourceLine": 653,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
}
`;

exports[`python snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

The tag mutability setting for your repository.

# Members <a name=\\"Members\\" id=\\"Members\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>aws_cdk.aws_ecr.TagMutability.MUTABLE</code> | allow image tags to be overwritten. |
| <code>aws_cdk.aws_ecr.TagMutability.IMMUTABLE</code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

## \`MUTABLE\` <a name=\\"MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


## \`IMMUTABLE\` <a name=\\"IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;

exports[`typescript snapshot 1`] = `
Object {
  "displayName": "TagMutability",
  "docs": Object {
    "summary": "The tag mutability setting for your repository.",
  },
  "fqn": "@aws-cdk/aws-ecr.TagMutability",
  "jsiiId": "@aws-cdk/aws-ecr.TagMutability",
  "members": Array [
    Object {
      "displayName": "MUTABLE",
      "docs": Object {
        "summary": "allow image tags to be overwritten.",
      },
      "fqn": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.MUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
    Object {
      "displayName": "IMMUTABLE",
      "docs": Object {
        "summary": "all image tags within the repository will be immutable which will prevent them from being overwritten.",
      },
      "fqn": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
      "jsiiId": "@aws-cdk/aws-ecr.TagMutability.IMMUTABLE",
      "sourceFile": "lib/repository.ts",
      "sourceLine": 653,
      "submoduleFqn": undefined,
      "submoduleJsiiId": undefined,
    },
  ],
  "sourceFile": "lib/repository.ts",
  "sourceLine": 653,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
}
`;

exports[`typescript snapshot 2`] = `
" TagMutability <a name=\\"TagMutability\\" id=\\"@aws-cdk/aws-ecr.TagMutability\\"></a>

The tag mutability setting for your repository.

# Members <a name=\\"Members\\" id=\\"Members\\"></a>

| **Name** | **Description** |
| --- | --- |
| <code>@aws-cdk/aws-ecr.TagMutability.MUTABLE</code> | allow image tags to be overwritten. |
| <code>@aws-cdk/aws-ecr.TagMutability.IMMUTABLE</code> | all image tags within the repository will be immutable which will prevent them from being overwritten. |

---

## \`MUTABLE\` <a name=\\"MUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.MUTABLE\\"></a>

allow image tags to be overwritten.

---


## \`IMMUTABLE\` <a name=\\"IMMUTABLE\\" id=\\"@aws-cdk/aws-ecr.TagMutability.IMMUTABLE\\"></a>

all image tags within the repository will be immutable which will prevent them from being overwritten.

---

"
`;
